# vista25-competitive-insights

./: Dockerfile.backend  README.md  docker-compose.yml  pyproject.toml
backend/: demo_runner.py  main.py  simple_demo_runner.py  simple_supabase.py
backend/agents/: competitive_intelligence_agent.py  signal_detector.py
backend/agents/tools/: data_storage_tool.py  insights_generator_tool.py  news_fetcher_tool.py  priority_assessment_tool.py  signal_analysis_tool.py
backend/api/: news.py
backend/core/: config.py  supabase.py
backend/data/: base.py  google_news.py  rapid_api.py  sec.py  sec_source.py
backend/models/: __init__.py  agent_state.py  auth.py  config.py  data_source.py  job.py  model.py  signal.py  tool_params.py
backend/services/: auth.py  deduplication.py  news_fetcher.py  sec_fetcher.py
backend/tasks/: news.py
backend/tests/integration_tests/: test_signal_extractor.py
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json
frontend/components/: FeaturesListicle.js
