[project]
dependencies = [
  "langchain-openai>=0.3.28",
  "langgraph>=0.5.4",
  "pydantic>=2.11.7",
  "supabase>=2.17.0",
  "httpx>=0.27.0",
  "python-dotenv==1.1.1",
  "loguru==0.7.3",
  "feedparser==6.0.11",
  "beautifulsoup4==4.13.4",
  "pydantic-settings>=2.10.1",
]
description = "Simplified competitive intelligence agent powered by LangGraph"
name = "vista25-competitive-insights"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

[dependency-groups]
dev = [
  "black>=25.1.0",
  "pytest>=8.4.1",
  "ruff>=0.12.4",
]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend/tests"]
